--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "scripts": {
     "install": "node-gyp-build",
     "prebuild": "prebuildify --napi",
-    "build-ts": "tsc"
+    "build-ts": "tsc",
+    "make-libuiohook-patch": "git -C ./libuiohook diff --cached > ./src/libuiohook.patch",
+    "apply-libuiohook-patch": "git -C ./libuiohook apply ../src/libuiohook.patch"
   },
   "files": [
     "dist",
