fix script coomand

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "preinstall": "apply-libuiohook-patch",
+    "preinstall": "yarn apply-libuiohook-patch",
     "install": "node-gyp-build",
     "prebuild": "prebuildify --napi",
     "build-ts": "tsc",
