--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,22 @@ name: Prebuild
 on: push
 
 jobs:
+  windows:
+    runs-on: windows-2019
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        submodules: true
+    - uses: actions/setup-node@v1
+      with:
+        node-version: 12
+    - run: yarn --frozen-lockfile
+    - run: yarn prebuild
+    - uses: actions/upload-artifact@v1
+      with:
+        name: windows
+        path: prebuilds
+
   linux:
     runs-on: ubuntu-18.04
     steps:
