--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
     - uses: actions/setup-node@v1
       with:
         node-version: 12
+    - run: yarn apply-libuiohook-patch
     - run: yarn --frozen-lockfile
     - run: yarn prebuild
     - uses: actions/upload-artifact@v1
@@ -31,6 +32,7 @@ jobs:
     - run: |
         sudo apt-get update
         sudo apt-get install -y libxrandr-dev libxtst-dev
+    - run: yarn apply-libuiohook-patch
     - run: yarn --frozen-lockfile
     - run: yarn prebuild
     - uses: actions/upload-artifact@v1
