--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uiohook-napi",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "author": {
     "name": "Alexander Drozdov"
   },
@@ -43,6 +43,9 @@
   },
   "dependencies": {
     "node-gyp-build": "4.x.x"
+  },
+  "prebuild": {
+    "test": "dist/prebuild-test-noop.js"
   },
   "gypfile": true,
   "engines": {
