--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,8 @@ jobs:
     - uses: actions/setup-node@v3
     - run: yarn apply-libuiohook-patch
     - run: yarn --frozen-lockfile
-    - run: yarn prebuild
+    - run: yarn prebuild --arch x64
+    - run: yarn prebuild --arch arm64
     - uses: actions/upload-artifact@v3
       with:
         name: darwin
